Revision history for Hash-Objectify

{{$NEXT}}

0.006     2016-09-12 21:21:35-04:00 America/New_York

    [Bug fixes]

    - Make can() return undef for a missing method, even in list context.

0.004     2016-09-12 19:12:15-04:00 America/New_York

    [Bug fixes]

    - Fix fatal error calling 'can' on non-existent keys.

0.002     2013-08-21 15:30:12 America/New_York

    - Fix documentation typos and tidy code

0.001     2012-07-24 14:40:35 America/New_York

    - First release