@@ -18,8 +18,8 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "Carp" => 0,
     "Class::XSAccessor" => 0,
+    "Exporter" => "5.57",
     "Scalar::Util" => 0,
-    "Sub::Install" => 0,
     "strict" => 0,
     "warnings" => 0
   },
@@ -39,10 +39,10 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Carp" => 0,
   "Class::XSAccessor" => 0,
+  "Exporter" => "5.57",
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Scalar::Util" => 0,
-  "Sub::Install" => 0,
   "Test::Fatal" => 0,
   "Test::More" => "0.96",
   "strict" => 0,
